# backend

./: .env.example  .gitignore  404.html  COMMIT_MESSAGE.md  ENV_EXAMPLE_UPDATE.md  PROJECT_RULES.md  README.md  WEATHER_API_GUIDE.md  azure-pipelines.yml  debug_import.py  function_app.py  host.json  index.html  pyproject.toml  requirements.txt  reset_db.py  sitemap.xml  test_weather.py  test_weather_api.py  verify_endpoints.py  verify_imports.py  weather.py  weather_short.py
.github/workflows/: test.yml
.sisyphus/drafts/: dall-e-generation.md
.sisyphus/plans/: dalle-image-gen.md
alembic/: env.py
alembic/versions/: 155a20682a64_add_missing_columns_to_chat_tables.py
api/overview/: index.html
api/weather-api/: index.html
app/: database.py  main.py
app/core/: config.py  constants.py  security.py
app/llm/: todays_pick_nodes.py  todays_pick_prompts.py  todays_pick_service.py  todays_pick_state.py  todays_pick_workflow.py
app/models/: __init__.py  chat.py  outfit.py  schemas.py  user.py  wardrobe.py  weather.py
app/routers/: auth.py  extraction_routes.py  health_routes.py  image_routes.py  recommendation_routes.py  user_routes.py  wardrobe_routes.py  weather_routes.py
app/schemas/: __init__.py  chat.py  common.py  extraction.py  outfit.py  recommendation.py  user.py  wardrobe.py
app/services/: auth_service.py  blob_storage.py  blob_storage_example.py  extractor.py  gemini_client.py  recommender.py  user_service.py  wardrobe_manager.py  weather_service.py
app/utils/: blob_storage.py  helpers.py  json_parser.py  langsmith_helper.py  model_init.py  validators.py
docs/: README.md  database_reference.md  index.md  presentation_content.md  timeline.md
getting-started/: index.html
scripts/: test_generation_manual.py
search/: search_index.json
tests/: conftest.py  test_user.py  test_wardrobe.py
(+67 files in other folders)
