[project]
name = "ai-stylist-agent"
version = "0.1.0"
description = "AI Stylist Agent - 옷 이미지 특징 추출 앱 - FastAPI 서버"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.7",
    "openai>=1.0.0",
    "langgraph>=0.0.1",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "azure-storage-blob>=12.28.0",
]

[tool.uv]
# 이 프로젝트는 단일 스크립트 파일이므로 패키지로 빌드하지 않음
dev-dependencies = []
