[project]
name = "backend"
version = "0.1.0"
description = "Backend API server (FastAPI/Azure Functions)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.7",
    "openai>=1.0.0",
    "langgraph>=0.0.1",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "azure-storage-blob>=12.28.0",
    "sqlalchemy>=2.0.46",
    "psycopg2-binary>=2.9.11",
    "alembic>=1.18.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "aiohttp>=3.13.3",
    "azure-functions>=1.18.0,<2.0.0",
]

[dependency-groups]
dev = [
    "pylint>=4.0.4",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=7.0.0",
    "debugpy>=1.8.19",
]
